fix: scroll editor overflow

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,5 @@
 .app-content {
     margin-left: 4em;
-    overflow: auto;
 }
 
 .main-content {
